# davinci-cli

./: .gitignore  2026-03-07-davinci-cli-commands-a.md  2026-03-07-davinci-cli-commands-b.md  2026-03-07-davinci-cli-phase1.md  CHANGELOG.md  CLAUDE.md  HANDOVER.md  README.ja.md  README.md  SKILL.md  pyproject.toml
.claude-plugin/: marketplace.json
.github/workflows/: ci.yml
docs/plans/: 2026-03-07-davinci-cli-phase1-revised.md  2026-03-07-davinci-cli-phase2-revised.md  2026-03-07-davinci-cli-phase3-revised.md  2026-03-08-api-audit-design.md  2026-03-08-api-audit-implementation.md  2026-03-08-skill-mcp-design.md  2026-03-08-skill-mcp-implementation.md  2026-03-09-api-return-check-design.md  2026-03-09-beat-markers.md
plugin/.claude-plugin/: plugin.json
plugin/skills/davinci-cli/: SKILL.md
plugin/skills/davinci-cli/references/: workflows.md
scripts/: check_version_sync.py  sync_version.py
src/davinci_cli/: __init__.py  cli.py  decorators.py  schema_registry.py
src/davinci_cli/commands/: beat_markers.py  clip.py  color.py  deliver.py  gallery.py  mcp_cmd.py  media.py  project.py  schema.py  system.py  timeline.py
src/davinci_cli/core/: connection.py  edition.py  environment.py  exceptions.py  logging.py  validation.py
src/davinci_cli/mcp/: instructions.py  mcp_server.py
src/davinci_cli/output/: formatter.py
tests/: smoke_test_real.py
tests/e2e/: mock_resolve.py  test_smoke.py
tests/mocks/: resolve_mock.py
tests/unit/: test_beat_markers.py  test_ci_config.py  test_cli.py  test_clip.py  test_color.py  test_connection.py  test_decorators.py  test_deliver.py  test_e2e_api_audit.py  test_edition.py  test_environment.py  test_exceptions.py  test_formatter.py  test_gallery.py  test_logging.py  test_mcp_cmd.py  test_mcp_server.py  test_media.py  test_project.py  test_project_setup.py  test_resolve_mock.py  test_schema.py  test_skill_md.py  test_system.py  test_timeline.py  test_validation.py
