[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "davinci-cli"
version = "0.1.0"
description = "DaVinci Resolve CLI / MCP — agent-first design"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1",
    "fastmcp>=0.1",
    "pydantic>=2.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
dr = "davinci_cli.cli:dr"
dr-mcp = "davinci_cli.mcp.mcp_server:mcp.run"

[tool.hatch.build.targets.wheel]
packages = ["src/davinci_cli"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]
ignore = ["RUF001", "RUF002", "RUF003"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
