[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "davinci-cli"
version = "1.0.1"
description = "DaVinci Resolve CLI / MCP — agent-first design"
authors = [{name = "M.Endo"}]
license = {text = "MIT"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
]
dependencies = [
    "click>=8.1",
    "fastmcp>=0.1",
    "pydantic>=2.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
dr = "davinci_cli.cli:dr"
dr-mcp = "davinci_cli.mcp.mcp_server:mcp.run"

[project.urls]
Homepage = "https://github.com/znznzna/davinci-cli"
Repository = "https://github.com/znznzna/davinci-cli"
Issues = "https://github.com/znznzna/davinci-cli/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/davinci_cli"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]
ignore = ["RUF001", "RUF002", "RUF003"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
